添加预警等信息

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -6,8 +6,8 @@
 
         <Preference
             app:iconSpaceReserved="false"
-            app:title="@string/change_style"
-            app:key="change_style"/>
+            app:key="change_style"
+            app:title="@string/change_style" />
 
         <SwitchPreferenceCompat
             app:iconSpaceReserved="false"
@@ -18,5 +18,5 @@
 
     <PreferenceCategory
         app:iconSpaceReserved="false"
-        app:title="@string/widgetset"/>
+        app:title="@string/widgetset" />
 </PreferenceScreen>
