--- a/app/src/main/res/layout/fragment_setting_main.xml
+++ b/app/src/main/res/layout/fragment_setting_main.xml
@@ -1,124 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:animateLayoutChanges="true"
+    android:id="@+id/mainView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/mainView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="@dimen/padding_small">
+
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_small"
+            android:text="@string/change_city"
+            android:textColor="@color/main_text"
+            android:textSize="@dimen/setting_title_size" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/edit_city"
+            android:layout_width="@dimen/icon"
+            android:layout_height="@dimen/icon"
+            android:layout_marginStart="@dimen/margin_small"
+            android:background="@drawable/ic_edit"
+            android:foreground="?selectableItemBackground" />
+    </LinearLayout>
+
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/groupCity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_small"
+        android:layout_marginEnd="@dimen/margin_small"
+        app:selectionRequired="true"
+        app:singleSelection="true" />
+
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/groupCityEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_small"
+        android:layout_marginEnd="@dimen/margin_small"
+        android:visibility="gone" />
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/add_city_input_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_small"
+        android:layout_marginEnd="@dimen/margin_small"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/add_city_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:hint="@string/input_hint"
+            android:inputType="text"
+            android:singleLine="true"
+            android:textColor="@color/theme"
+            android:textSize="@dimen/item_smalltext_size" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <FrameLayout
+        android:id="@+id/setting_test"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_marginStart="@dimen/margin_small"
+        android:orientation="vertical"
+        android:padding="@dimen/padding_small">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="@dimen/padding_small">
+            android:orientation="vertical">
 
             <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
+                android:id="@+id/widgetText"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_small"
-                android:text="@string/change_city"
+                android:text="@string/widget_text_color"
                 android:textColor="@color/main_text"
                 android:textSize="@dimen/setting_title_size" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/edit_city"
-                android:layout_width="@dimen/icon"
-                android:layout_height="@dimen/icon"
-                android:layout_marginStart="@dimen/margin_small"
-                android:background="@drawable/ic_edit"
-                android:foreground="?selectableItemBackground" />
-        </LinearLayout>
-
-
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/groupCity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_small"
-            android:layout_marginEnd="@dimen/margin_small"
-            app:selectionRequired="true"
-            app:singleSelection="true" />
-
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/groupCityEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_small"
-            android:layout_marginEnd="@dimen/margin_small"
-            android:visibility="gone" />
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/add_city_input_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_small"
-            android:layout_marginEnd="@dimen/margin_small"
-            android:visibility="gone"
-            tools:visibility="visible">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/add_city_edit_text"
+            <com.weather.util.ColorSeekBar
+                android:id="@+id/colorPicker"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:hint="@string/input_hint"
-                android:inputType="text"
-                android:singleLine="true"
-                android:textColor="@color/theme"
-                android:textSize="@dimen/item_smalltext_size" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_margin="@dimen/margin_small"
+                android:minHeight="@dimen/seekbar_height" />
 
-        <FrameLayout
-            android:id="@+id/setting_test"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="@dimen/margin_small"
-            android:orientation="vertical"
-            android:padding="@dimen/padding_small">
-
-            <LinearLayout
+            <com.weather.util.ColorSeekBar
+                android:id="@+id/colorGradient"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/widgetText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/widget_text_color"
-                    android:textColor="@color/main_text"
-                    android:textSize="@dimen/setting_title_size" />
-
-                <com.weather.util.ColorSeekBar
-                    android:id="@+id/colorPicker"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/margin_small"
-                    android:minHeight="@dimen/seekbar_height" />
-
-                <com.weather.util.ColorSeekBar
-                    android:id="@+id/colorGradient"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/margin_small"
-                    android:minHeight="@dimen/seekbar_height" />
-
-            </LinearLayout>
+                android:layout_margin="@dimen/margin_small"
+                android:minHeight="@dimen/seekbar_height" />
 
         </LinearLayout>
 
     </LinearLayout>
-</com.google.android.material.card.MaterialCardView>
 
+</LinearLayout>
