--- a/app/src/main/res/layout/fragment_weather_info.xml
+++ b/app/src/main/res/layout/fragment_weather_info.xml
@@ -26,52 +26,103 @@
         android:visibility="gone"
         tools:visibility="visible" />
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/sun_chart"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_marginBottom="@dimen/padding_small" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list_warn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:itemCount="1"
-        tools:listitem="@layout/item_warn" />
-
     <LinearLayout
-        android:id="@+id/layout_air"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:gravity="center"
+        android:orientation="horizontal"
         android:padding="@dimen/padding_small">
 
-        <LinearLayout
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="@dimen/big_icon"
+            android:layout_height="@dimen/big_icon"
+            android:src="@drawable/ic_sunrise" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/sun_rise"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginStart="@dimen/margin_small"
+            android:layout_weight="1"
+            tools:text="@string/app_name" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="空气质量："
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-                android:textColor="@color/theme"
-                tools:text="空气质量：" />
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/sun_set"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_small"
+            android:layout_weight="1"
+            android:gravity="end"
+            tools:text="@string/app_name" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/air_aqi"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
-                tools:text="45 优" />
-        </LinearLayout>
-
-
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="@dimen/big_icon"
+            android:layout_height="@dimen/big_icon"
+            android:src="@drawable/ic_sunset" />
     </LinearLayout>
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/layout_air"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="@dimen/padding_small"
+                android:visibility="gone"
+                tools:visibility="visible">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="空气质量："
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+                        android:textColor="@color/theme"
+                        tools:text="空气质量：" />
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/air_aqi"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+                        tools:text="45 优" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_warn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="false"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:itemCount="1"
+                tools:listitem="@layout/item_warn" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_indices"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="false"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:itemCount="5"
+                tools:listitem="@layout/item_indices" />
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
 
 
