--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="padding_small">8dp</dimen>
     <dimen name="lineHeight">1dp</dimen>
     <dimen name="icon">24dp</dimen>
+    <dimen name="big_icon">48dp</dimen>
     <dimen name="widget_margin">8dp</dimen>
     <dimen name="cardRadius">8dp</dimen>
     <dimen name="seekbar_height">25dp</dimen>
