--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="widget_margin">8dp</dimen>
     <dimen name="cardRadius">8dp</dimen>
     <dimen name="seekbar_height">25dp</dimen>
+    <dimen name="widget_hr_width">2dp</dimen>
 </resources>
