--- a/app/src/main/res/layout/widget_1.xml
+++ b/app/src/main/res/layout/widget_1.xml
@@ -44,6 +44,8 @@
         android:layout_height="32dp"
         android:layout_centerInParent="true"
         android:layout_margin="@dimen/margin_small"
+        android:visibility="gone"
+        tools:visibility="visible"
         android:background="@color/main_text"
         android:gravity="center" />
 
