--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,4 +1,5 @@
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
         app:iconSpaceReserved="false"
@@ -12,7 +13,8 @@
         <SwitchPreferenceCompat
             app:iconSpaceReserved="false"
             app:key="show_nl"
-            app:title="@string/show_nl" />
+            app:title="@string/show_nl"
+            android:defaultValue="true"/>
 
     </PreferenceCategory>
 
