--- a/app/src/main/res/layout/fragment_weather_info.xml
+++ b/app/src/main/res/layout/fragment_weather_info.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:minHeight="200dp"
     android:orientation="vertical">
 
     <com.google.android.material.textview.MaterialTextView
@@ -16,6 +17,25 @@
         android:textSize="@dimen/setting_title_size"
         tools:text="18日" />
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/sun_rise_set"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_small"
+        android:textColor="@color/secondary_text"
+        android:textSize="@dimen/item_smalltext_size"
+        tools:text="@string/app_name" />
+
+    <TextView
+        android:id="@+id/nodata"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:visibility="gone"
+        android:layout_gravity="center"
+        android:textColor="@color/theme"
+        android:text="暂无信息"/>
+
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/lineChart"
         android:layout_width="match_parent"
@@ -25,40 +45,7 @@
         android:visibility="gone"
         tools:visibility="visible" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="@dimen/padding_small">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="@dimen/big_icon"
-            android:layout_height="@dimen/big_icon"
-            android:src="@drawable/ic_sunrise" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/sun_rise"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_small"
-            android:layout_weight="1"
-            tools:text="@string/app_name" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/sun_set"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/margin_small"
-            android:layout_weight="1"
-            android:gravity="end"
-            tools:text="@string/app_name" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="@dimen/big_icon"
-            android:layout_height="@dimen/big_icon"
-            android:src="@drawable/ic_sunset" />
-    </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
